# bisweb

./: .eslintrc.js  .gitattributes  .gitignore  LICENSE  README.md  TODO.md  exampleTree.json  fullbuild.sh  gulpfile.js  hello.txt  npm-shrinkwrap.json  package-lock.json  package.json  update.sh
actions/: entrypointtest.sh  push.yml  test.yml
biswebpython/: README.md  biswebpy.py
compiletools/: README.md  addlicense.js  addlicense_gpl.js  bad.sh  bis_create_matlab_header_file.js  bis_create_wasm_module.js  bis_create_wrappers.js  bis_createdatefile.js  bis_createjsmodulestotestlist.js  bis_createmoduledescriptions.js  bis_createmodulelist.js  bis_createmodulescripts.js  biscreatepackagefile.js  biswebinstall.sh  ccmake.bat  ccmake.sh  ccmake_native.sh  cmake.sh  fixmanifest.js  fullbuild.bat  fullbuild.sh  inno.sh  nativebuild.bat  nativebuild.sh  pythonwheel.bat  pythonwheel.sh  testbuild.sh  wasmbuild.bat  wasmbuild.sh  webbuild.bat  webbuild.sh
config/: BISWASMConfig.cmake  BISWEBConfig.cmake  Doxyfile  LICENSE  MANIFEST.in  README.md  UseBISWASM.cmake  UseBISWEB.cmake  __init2__.py  __init__.py  app.config.js  bis_checknodeversion.js  bis_createutil.js  bis_gulputils.js  bis_path.py  biselectron.iss  bisweb_pathconfig.js  biswebbrowser_readme.md  biswebnode_readme.md  biswebpython_readme.md  createbuild.js  createjsbuild.js  createjsbuild.sh  createsimple.js  jsdoc_conf.json  lib.config.js  mocha.config.js  runscript.bat.in  runscript.in  setpaths.bat  setpaths.csh  setpaths.sh  setpaths_build.sh  setup.py  updatelinks.js  webpack.config.js  webpack.config_devel.js  webpack.config_uglify.js
cpp/: CMakeLists.txt  CMakeLists.txt.latest  CPackOptions.cmake  ModuleList.txt  PythonModuleList.txt  README.md  b_jsmn.c  b_jsmn.h  bisAbstractTransformation.cpp  bisAbstractTransformation.h  bisAdvancedImageAlgorithms.h  bisAdvancedImageAlgorithms.txx  bisBiasFieldAlgorithms.h  bisBiasFieldAlgorithms.txx  bisComboTransformation.cpp  bisComboTransformation.h  bisConfigure.js.in  bisConfigure.py.in  bisDTIAlgorithms.cpp  bisDTIAlgorithms.h  bisDataObject.cpp  bisDataObject.h  bisDataObjectFactory.cpp  bisDataObjectFactory.h  bisDataTypes.cpp  bisDataTypes.h  bisDefinitions.h  bisEigenUtil.cpp  bisEigenUtil.h  bisExportedFunctions.cpp  bisExportedFunctions.h  bisExportedFunctions2.cpp  bisExportedFunctions2.h  bisExportedFunctions3.cpp  bisExportedFunctions3.h  bisGridTransformation.cpp  bisGridTransformation.h  bisIdentityTransformation.cpp  bisIdentityTransformation.h  bisImageAlgorithms.h  (+46 more)
cpp/afni/: BisWebAFNI.cmake  bisAFNIExportedFunctions.cpp  bisAFNIExportedFunctions.h  bisAFNIUtils.cpp  bisAFNIUtils.h  bisAFNIUtils.old.cpp  bisAFNIUtils.txx
cpp/cpmcode/: CPM.cpp  CPM.hpp  Group.cpp  Group.hpp  Makefile  RCPM.cpp  RCPM.hpp  bisCPM.cpp  bisCPM.h  connectome_orig.txt  main.cpp  phenotype.txt  phenotype_orig.txt  predictory.cpp  predictory.hpp  tools.hpp
cpp/gpl/: README.md  bisAbstractImageRegistration.cpp  bisAbstractImageRegistration.h  bisApproximateDisplacementField.cpp  bisApproximateDisplacementField.h  bisDTIAlgorithms.cpp  bisDTIAlgorithms.h  bisGPLExportedFunctions.cpp  bisGPLExportedFunctions.h  bisImageSegmentationAlgorithms.h  bisImageSegmentationAlgorithms.txx  bisLinearImageRegistration.cpp  bisLinearImageRegistration.h  bisNonLinearImageRegistration.cpp  bisNonLinearImageRegistration.h  bisOptimizer.cpp  bisOptimizer.h
cpp/js/: libbiswasm_post.js  libbiswasm_pre.js
cpp/nongpl/: bisReplacementExportedFunctions.cpp  bisReplacementExportedFunctions.h
cpp/old/: bisImageReslice.txx
data/: XeniosMakefile  bisweb.js  exampleTree.json  network.csv  network_names.csv  sampleformat.json
doc/: AspectsOfJS.md  BisWebJS.md  BisWebMatlab.md  BisWebPython.md  DesktopAppsWithElectron.md  JStoWASM.md  ModulesInJS.md  ModulesInPython.md  README.md  WhyJS.md
docker/: Dockerfile  Dockerfile.gpu  README.md  bash.bashrc  biswebconfig.gpu.sh  biswebconfig.sh  biswebinstall.sh  build.sh  dockerbuild.gpu.sh  dockerbuild.sh  dockerrun.bat  dockerrun.gpu.sh  dockerrun.gpu2.sh  dockerrun.sh  dockerrun2.sh  dockerupdate.sh  dotbashrc  entrypoint.sh  fullbuild.sh  nativebuild.sh  testbuild.sh  wasmbuild.sh  webbuild.sh
docs/: AWSBuckets.md  AddingANewDataType.md  AspectsOfJS.md  BisWebJS.md  BisWebMatlab.md  BisWebPython.md  CommandLineTools.md  DesktopAppsWithElectron.md  JStoWASM.md  ModulesInJS.md  ModulesInPython.md  README.md  WhyJS.md
fileserver/: README.md  Server.md  ServerTODO.md  client.js  index.html  run.js  server.js  wsutil.js
js/: .jshintrc  README.md
lib/: README.md
matlab/: README.md  bis_all_tests.m  bis_butterworth.m  bis_butterworthVector.m  bis_datadistancematrix.m  bis_distmatrixclustering.m  bis_distmatrixparcellation.m  bis_example.m  bis_image.m  bis_imagedistancematrix.m  bis_individualizedparcellation.m  bis_loadbinmatrix.m  bis_matrix.m  bis_wasmutils.m  bispath.m  t2.m  test.m  test_combo.m  test_combo2.m  test_indiv.m  test_largemem_smooth.m  test_load.m  test_matrix.m  test_resample.m  test_reslice.m  test_smooth.m  test_smooth1.m  test_smooth2.m  test_smooth3.m  test_warp.m  test_wrap.m  viewer.m
python/: bis_basemodule.py  bis_commandline.py  bis_objects.py  bis_wasmutils.py
test/: README.md  biselectrontest.js  bispreload.js  biswebtest.css  biswebtest.html  biswebtest.js  module_tests.json  package.json  test_asyncbrukerread.js  test_asynctfjs.js  test_bids.js  test_brukerread.js  test_checksum.js  test_colormaps.js  test_cpm.js  test_cpmingestor.js  test_dti.js  test_eigen.js  test_eigen.py  test_electrodegrids.js  test_fmrimatrixconnectivity.js  test_fmrimatrixconnectivity2.js  test_glm.js  test_gridapproximatepoints.py  test_hdrf.js  test_image.js  test_image4dsmoothreslice.js  test_imagedistancematrix.js  test_imagedistancematrix.py  test_imageregistration.js  test_imageregistration2.js  test_imageresample.js  test_imageresample.py  test_imageresample2.js  test_imageresample3.js  test_imagesegmentation.js  test_imageslicer.js  test_imageslicer2.js  test_imagesmooth.js  test_imagesmooth2.js  (+34 more)
various/: README.md  TODO.md  (+1 more)
(+1244 files in other folders)
